@@ -138,12 +138,12 @@ Depends: ${shlibs:Depends}, ${misc:Depends}, debconf (>= 1.2.9) | debconf-2.0,
  ${pdftops-Depends}, perl-modules, procps, ghostscript, lsb-base (>= 3),
  cups-common (>= ${source:Upstream-Version}), 
  cups-client (>= ${binary:Version}),
- ssl-cert (>= 1.0.11), adduser, bc, ttf-freefont, udev
+ ssl-cert (>= 1.0.11), adduser, bc, ttf-freefont
 Recommends: foomatic-filters (>= 4.0), 
  cups-driver-gutenprint, ghostscript-cups
 Suggests: cups-bsd, cups-ppdc, foomatic-db-engine, foomatic-db,
  hplip, xpdf-korean | xpdf-japanese | xpdf-chinese-traditional | xpdf-chinese-simplified, 
- cups-pdf, smbclient (>= 3.0.9)
+ cups-pdf, smbclient (>= 3.0.9), udev
 Replaces: cupsddk-drivers (<< 1.4.0), cupsys-bsd (<< 1.3.7-5), cupsys (<< 1.3.7-6)
 Conflicts: cupsddk-drivers (<< 1.4.0), cupsys-bsd (<< 1.3.7-5), cupsys (<< 1.3.7-6)
 Provides: cupsddk-drivers, cupsys
