@@ -10,8 +10,11 @@ cups (1.4.1-2) UNRELEASED; urgency=low
     coldplugging, since according to Scott James Remnant this slows down boot
     and kills kittens. Instead, just call it with --dry-run and manually call
     udev-configure-printer.
+  * debian/cups.init.d: Only run udevadm if udev and the callout are actually
+    available. Drop udev dependency to a suggests. This unbreaks cups on
+    platforms which do not have udev, such as kfreebsd. (Closes: #546922)
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 15 Sep 2009 17:14:10 +0200
+ -- Martin Pitt <mpitt@debian.org>  Tue, 15 Sep 2009 17:14:10 +0200
 
 cups (1.4.1-1) unstable; urgency=low
 
